# axum-keycloak-auth

./: Cargo.toml  README.md
src/: action.rs  decode.rs  error.rs  extract.rs  instance.rs  layer.rs  lib.rs  middleware.rs  oidc.rs  oidc_discovery.rs  role.rs  service.rs
tests/: integration_test.rs
tests/backend/: mod.rs
tests/common/: tracing.rs
tests/keycloak_container/: mod.rs
