[package]
name = "axum-keycloak-auth"
version = "0.6.0"
edition = "2021"
rust-version = "1.74.1"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/axum-keycloak-auth"
description = """
Protect axum routes with a JWT emitted by Keycloak.
"""
categories = ["authentication", "web-programming"]
keywords = ["keycloak", "auth", "jwt", "oidc", "axum"]

[features]
default = ["default-tls", "reqwest/charset", "reqwest/http2", "reqwest/macos-system-configuration"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
atomic-time = "0.1.5"
axum = "0.7.5"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
futures = "0.3.30"
http = "1.1.0"
jsonwebtoken = "9.3.0"
nonempty = "0.10.0"
reqwest = { version = "0.12.5", features = ["json"], default-features = false }
serde = "1.0.203"
serde-querystring = "0.3.0-beta.0"
serde_json = "1.0.117"
serde_with = "3.8.1"
snafu = "0.8.3"
time = "0.3.36"
tokio = "1.38.0"
tower = "0.5.1"
tracing = "0.1.40"
try-again = "0.1.1"
typed-builder = "0.20.0"
url = "2.5.1"
uuid = { version = "1.8.0", features = ["v7"] }

[dev-dependencies]
assertr = { git = "https://github.com/lpotthast/assertr", branch = "main" }
keycloak = "25.0.0"
testcontainers = "0.22.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
