[package]
name = "axum-keycloak-auth"
version = "0.7.1"
edition = "2021"
rust-version = "1.74.1"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/axum-keycloak-auth"
description = """
Protect axum routes with a JWT emitted by Keycloak.
"""
categories = ["authentication", "web-programming"]
keywords = ["keycloak", "auth", "jwt", "oidc", "axum"]

[features]
default = ["default-tls", "reqwest/charset", "reqwest/http2", "reqwest/macos-system-configuration"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
atomic-time = "0.1.5"
axum = "0.8.1"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
futures = "0.3.31"
http = "1.2.0"
jsonwebtoken = "9.3.0"
nonempty = { version = "0.11.0", features = ["std"] }
reqwest = { version = "0.12.12", features = ["json"], default-features = false }
serde = "1.0.217"
serde-querystring = "0.3.0"
serde_json = "1.0.134"
serde_with = "3.12.0"
snafu = "0.8.5"
time = "0.3.37"
tokio = "1.42.0"
tower = "0.5.2"
tracing = "0.1.41"
try-again = "0.1.1"
typed-builder = "0.20.0"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v7"] }

[dev-dependencies]
assertr = "0.1.0"
keycloak = "26.0.700"
testcontainers = "0.23.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v7", "serde"] }
